body css in reset.css to fix scrollbar jitter

--- a/src/styles/_reset.css
+++ b/src/styles/_reset.css
@@ -154,3 +154,14 @@ a {
 body::-webkit-scrollbar {
   width: 0 !important
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden;
+
+}
+
+body:hover {
+  overflow-y: scroll;
+}
